--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <a class="nav-link" href="" onclick="alert('This section is not completed');">
                 Our projects & success
             </a>
+            <span id="right">
+                Mobile
+            </span>
         </div>
     </nav>
 
@@ -72,17 +75,43 @@
             </div>
             <table> 
                 <tr>
-                    <td>
+                    <td class="member-box">
                         <center>
-                            <a href="https://valeh-ismayilov.github.io/personal" target="_blank">
+                            <a href="https://ismayilov.epizy.com" target="_blank">
                                 <img class="member-image" src="./assets/img/members/valeh-ismayilov.png" title="Valeh Ismayilov / Front-end Developer & Leader">
                             </a>
                         </center>
                         <p class="paragraph member-name">
-                            Valeh Ismayilov 
+                            Valeh Ismayilov
                         </p>
                         <p class="paragraph member-status">
-                            Front-end Developer & Leader
+                            Front-end Developer &nbsp;
+                        </p>
+                    </td>
+                    <td class="member-box">
+                        <center>
+                            <a href="" target="_blank">
+                                <img class="member-image" src="./assets/img/members/ali-ulmusov.png" title="Valeh Ismayilov / Front-end Developer & Leader">
+                            </a>
+                        </center>
+                        <p class="paragraph member-name">
+                            Ali Ulmusov
+                        </p>
+                        <p class="paragraph member-status">
+                            &nbsp; Front-end Developer &nbsp;
+                        </p>
+                    </td>
+                    <td class="member-box">
+                        <center>
+                            <a href="" target="_blank">
+                                <img class="member-image" src="./assets/img/members/yusuf-utku.png" title="Valeh Ismayilov / Front-end Developer & Leader">
+                            </a>
+                        </center>
+                        <p class="paragraph member-name">
+                            Yusuf Utku
+                        </p>
+                        <p class="paragraph member-status">
+                            &nbsp; Front-end Developer
                         </p>
                     </td>
                 </tr>
