--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             Yusuf Utku
                         </p>
                         <p class="paragraph member-status">
-                            &nbsp; Front-end Developer
+                            &nbsp; Full-stack Developer
                         </p>
                     </td>
                 </tr>
