--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <td class="member-box">
                         <center>
                             <a href="" target="_blank">
-                                <img class="member-image" src="./assets/img/members/ali-ulmusov.png" title="Valeh Ismayilov / Front-end Developer & Leader">
+                                <img class="member-image" src="./assets/img/members/ali-ulmusov.png" title="Ali Ulmusov / Front-end Developer & Leader">
                             </a>
                         </center>
                         <p class="paragraph member-name">
@@ -104,7 +104,7 @@
                     <td class="member-box">
                         <center>
                             <a href="" target="_blank">
-                                <img class="member-image" src="./assets/img/members/yusuf-utku.png" title="Valeh Ismayilov / Front-end Developer & Leader">
+                                <img class="member-image" src="./assets/img/members/yusuf-utku.png" title="Yusuf Utku / Full-stack Developer & Leader">
                             </a>
                         </center>
                         <p class="paragraph member-name">
